5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1756_1183.log
== TEST (2019-05-22 19:53:25) 
-- CODE:
from numpy import *
V = int(array(eval(input("Vetor: "))))
p = 0 #elementos positivos
copia = 0 
while (V[p] >= 0):
	p = p + 1
	copia = copia + V[p]
e = 0 #posicao do vetor de entrada
s = 0 #posicao do vetor de saida
while	(p )
-- ERROR:
File "XXXX", line 10
    while	(p )
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:53:37) 
-- CODE:
from numpy import *
V = int(array(eval(input("Vetor: "))))
p = 0 #elementos positivos
copia = 0 
while (V[p] >= 0):
	p = p + 1
	copia = copia + V[p]
e = 0 #posicao do vetor de entrada
s = 0 #posicao do vetor de saida

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:29:17) 
-- CODE:
from numpy import *
V = int(array(eval(input("Vetor: "))))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V))
	if (V[p] >= 0):
		p = p + 1
		copia = copia + "V[p]"
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
while (s < p):
	s = s + 1
	z = z + copia
	
-- ERROR:
File "XXXX", line 6
    while (i < size(V))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:29:24) 
-- CODE:
from numpy import *
V = int(array(eval(input("Vetor: "))))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
		copia = copia + "V[p]"
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
while (s < p):
	s = s + 1
	z = z + copia
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:29:38) 
-- CODE:
from numpy import *
V = int(array(eval(input("Vetor: "))))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
		copia = copia + "V[p]"
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
while (s < p):
	s = s + 1
	z = z + copia
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:30:39) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
		copia = copia + "V[p]"
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
while (s < p):
	s = s + 1
	z = z + copia
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:39:33) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
		copia = copia + "V[p]"
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
while (s < p):
	s = s + 1
	z = z + copia
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:50:15) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
		copia = copia + V[p]
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
while (s < p):
	s = s + 1
	z = z + copia
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:54:22) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
		copia = copia + V[p]
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
while (s < p):
	s = s + 1
	z = z + copia
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:01:42) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] > 0):
	   z[p] = V[s]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:02:39) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] > 0):
	   z[p] = V[s]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:04:07) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] > 0):
	   z[p] = V[s]
	s = s + 1
	print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:05:07) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] >= 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] > 0):
	   z[p] = V[s]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:07:25) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] > 0):
	   z[p] = V[s]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:09:28) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] > 0):
	   z[p] = V[p]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:14:35) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] >= 0):
	   z[p] = V[p]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:14:45) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] >= 0):
	   z[p] = V[p]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:15:14) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] >= 0):
	   z[p] = V[p]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:15:21) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[p] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (s < size(V)):
	if (V[p] >= 0):
	   z[p] = V[p]
	s = s + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:20:57) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (i < size(V)):
	if (V[i] >= 0):
	   z[s] = V[p]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:22:11) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z[p] = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:23:35) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z[s] = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:26:57) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z[s] = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:30:26) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z[s] = V[i]
	i = i + 1
	else: 
print(z)
	
-- ERROR:
File "XXXX", line 17
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:35:25) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z[s] = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:36:35) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z[s] = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:39:03) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:39:17) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:39:33) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:39:34) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:39:34) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z = V[i]
	i = i + 1
print(z)
	
-- EXECUTION TIME:
0.288384
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
1
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
5
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:40:25) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s)
i = 0
while (i < size(V)):
	if (V[i] > 0):
	   z = V[i]
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:48:38) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	i = i + 1
print(z)
	
-- ERROR:
File "XXXX", line 23
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:48:56) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	i = i + 1
print(z)
	
-- ERROR:
File "XXXX", line 23
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:49:02) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	i = i + 1
print(z)
	
-- ERROR:
File "XXXX", line 23
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:49:16) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 21:49:20) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- EXECUTION TIME:
0.572607
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 19, in <module>
    z[i] = V[s]
IndexError: index 0 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:49:32) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:50:28) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 21:50:36) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:33:33) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] > 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:33:36) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] > 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- EXECUTION TIME:
0.321407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 19, in <module>
    z[i] = V[s]
IndexError: index 0 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:33:37) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] > 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:34:31) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:34:35) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- EXECUTION TIME:
0.522726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1756/1183/main.py", line 19, in <module>
    z[i] = V[s]
IndexError: index 0 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:34:37) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   z[i] = V[s]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:35:33) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(s, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   V[s] = z[i]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:36:21) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   V[s] = z[i]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:36:37) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 #posicao do vetor de saida
z = zeros(p, dtype=int)
i = 0
while (i < size(V)):
	if (V[s] >= 0):
	   V[s] = z[i]
	else:
		while(V[s]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:39:53) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 
z = zeros(p, dtype=int)
i = 0
while (s < size(V)):
	if (V[i] >= 0):
	   z[i]=V[s]
	else:
		while(V[i]<0):
			s = s + 1
		z[i] = V[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:41:23) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 
z = zeros(p, dtype=int)
i = 0
while (s < size(V)):
	if (V[i] >= 0):
	   z[s]=V[i]
	else:
		while(V[i]<0):
			s = s + 1
		z[s] = V[i]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:42:31) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))
p = 0 #elementos positivos
copia = 0 
i = 0
while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
s = 0 
z = zeros(p, dtype=int)
i = 0
while (s < size(V)):
	if (V[i] >= 0):
	   V[i] = z[s]
	else:
		while(V[i]<0):
			s = s + 1
		V[i] = z[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:46:22) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))

p = 0 #elementos positivos 
i = 0 #contadora

while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
i = 0 #posição
z = zeros(p, dtype=int)
s = 0 #contadora
while (s < size(z)):
	if (V[i] >= 0):
	   V[i] = z[s]
	else:
		while(V[i]<0):
			s = s + 1
		V[i] = z[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:46:30) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))

p = 0 #elementos positivos 
i = 0 #contadora

while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
i = 0 #posição
z = zeros(p, dtype=int)
s = 0 #contadora
while (s < size(z)):
	if (V[i] >= 0):
	   V[i] = z[s]
	else:
		while(V[i]<0):
			s = s + 1
		V[i] = z[s]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:48:33) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))

p = 0 #elementos positivos 
i = 0 #contadora

while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
i = 0 #posição
z = zeros(p, dtype=int)
s = 0 #contadora
while (s < size(z)):
	if (V[i] >= 0):
	   z[s]=V[i]
	else:
		while(V[i]<0):
			s = s + 1
		z[s]=V[i]
	s = s + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:53:11) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))

p = 0 #elementos positivos 
i = 0 #contadora

while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
i = 0 #posição
z = zeros(p, dtype=int)
p = 0 #contadora
while (p < size(z)):
	if (V[i] >= 0):
	   z[p]=V[i]
	else:
		while(V[i]<0):
			i = i + 1
		z[p]=V[i]
	p = p + 1
	i = i + 1
print(z)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 12:53:52) 
-- CODE:
from numpy import *
V = array(eval(input("Vetor: ")))

p = 0 #elementos positivos 
i = 0 #contadora

while (i < size(V)):
	if (V[i] > 0):
		p = p + 1
	i = i + 1
i = 0 #posição
z = zeros(p, dtype=int)
p = 0 #contadora
while (p < size(z)):
	if (V[i] >= 0):
	   z[p]=V[i]
	else:
		while(V[i]<0):
			i = i + 1
		z[p]=V[i]
	p = p + 1
	i = i + 1
print(z)
	
-- EXECUTION TIME:
0.364066
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
